[gd_scene load_steps=5 format=3 uid="uid://dlgbmnlgs680t"]

[ext_resource type="Script" uid="uid://cjejrmbbas3na" path="res://scripts/boid.gd" id="1_xur1n"]

[sub_resource type="CylinderMesh" id="CylinderMesh_fg5l1"]
top_radius = 0.0
height = 1.2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xur1n"]
size = Vector2(1.1999999, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_xur1n"]
radius = 7.0007133

[node name="Boid" type="CharacterBody2D"]
scale = Vector2(10, 10)
collision_mask = 0
script = ExtResource("1_xur1n")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
rotation = -1.5707964
mesh = SubResource("CylinderMesh_fg5l1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-2.9802317e-08, 0)
rotation = 0.003175305
scale = Vector2(0.9999998, 0.9999998)
shape = SubResource("RectangleShape2D_xur1n")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_xur1n")

[node name="RayCastFront" type="RayCast2D" parent="."]
target_position = Vector2(10, 0)
collision_mask = 2

[node name="RayCastRight" type="RayCast2D" parent="."]
rotation = 0.7853982
target_position = Vector2(10, 0)
collision_mask = 2

[node name="RayCastLeft" type="RayCast2D" parent="."]
rotation = -0.7853982
target_position = Vector2(10, 0)
collision_mask = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
